--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,44 @@
+
 .container { 
-  position:relative; 
-}
-
-.image1 { position:absolute; 
-  top: 0px; 
-  left: 0px; 
-  z-index: 1; 
-  width: 512px;
-} 
-
-.image2 { position:absolute; 
-  top: 240px; 
-  left: 200px; 
+  position:absolute; 
   z-index: 3;
 }
+
+.mover {
+  position:relative; 
+  top: 0px; 
+  left: 0px; 
+  z-index: 2;
+}
+
+.cardImage { 
+  position:absolute; 
+  top: 0px; 
+  left: 0px; 
+  z-index: 1;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 10px;
+} 
+
+.barcode { 
+  position:absolute; 
+  cursor: grab;
+	cursor: -webkit-grab;
+  z-index: 3;
+  top: 130px; 
+  left: 106px; 
+  width: 188px;
+  height: 62px;
+  border: .5px solid rgb(0, 0, 0);
+  border-radius: 0px;
+}
+
+.barcode.active {
+  cursor: grabbing;
+	cursor: -webkit-grabbing;
+}
+
+.link {
+  margin-top: 265px;
+}
+
