--- a/styles.css
+++ b/styles.css
@@ -15,23 +15,6 @@ body {
   z-index: 1;
 } 
 
-/*
-.barcodeContainer {
-  position: relative; 
-  cursor: grab;
-	cursor: -webkit-grab;
-  top: 50px; 
-  left: 106px; 
-  width: 217px;
-  height: 55px;
-  border: .5px solid rgb(0, 0, 0);
-  background-color: white;
-  border-radius: 0px;
-  z-index: 2;
-  padding: 10px, 10px, 0px, 10px;
-}
-*/
-
 .barcode { 
   position: relative;
   cursor: grab;
@@ -41,8 +24,8 @@ body {
   line-height: 100%; */
   width: 244px;
   height: 46px;
-  top: -120px;
-  left: 80px;
+  top: -90px;
+  left: 70px;
   text-align: center;
   background-color:white;
   z-index: 3;
@@ -59,6 +42,16 @@ body {
 }
 
 .link {
+  top: -80px;
   position: relative;
+  z-index: 5;
 }
 
+.notes {
+  position: relative;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 10px;
+  top: -80px;
+  width: 400px;
+  height: 200px;
+}
