--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
 .barcode.active {
   cursor: grabbing;
   cursor: -webkit-grabbing;
-  webkit-overflow scrolling: touch;
+  -webkit-overflow scrolling: touch;
 }
 
 .link {
