--- a/styles.css
+++ b/styles.css
@@ -9,26 +9,22 @@ body {
   top: 0px; 
   left: 0px; 
   z-index: 1;
- /* border: 2px solid rgb(0, 0, 0); */
   border-radius: 10px; 
   z-index: 1;
 } 
 
 .barcode { 
   position: relative;
-  -webkit-overflow scrolling: touch;
   cursor: grab;
 	cursor: -webkit-grab;
-/*  font-family: BarCode; 
-  font-size: 45px;
-  line-height: 100%; */
   width: 280px;
   height: 55px;
-  top: -120px;
-  left: 80px;
+  top: -70px;
+  left: 30px;
   text-align: center;
   background-color:white;
   z-index: 3;
+  -webkit-user-drag: element;
 }
 
 .bc# {
@@ -38,8 +34,7 @@ body {
 
 .barcode.active {
   cursor: grabbing;
-  cursor: -webkit-grabbing;
-  -webkit-overflow scrolling: touch;
+	cursor: -webkit-grabbing;
 }
 
 .link {
